crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__binop_with_function_application.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "Code:\n\nf x + g y"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: BinOps {
        operands: [
            BinOpOperand {
                expr: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: Call {
                        function: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 1,
                                },
                                end: Position {
                                    line: 1,
                                    column: 2,
                                },
                            },
                            value: Var {
                                kind: LowVar,
                                name: "f",
                            },
                        },
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 3,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 4,
                                    },
                                },
                                value: Var {
                                    kind: LowVar,
                                    name: "x",
                                },
                            },
                        ],
                    },
                },
                op: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: "+",
                },
            },
        ],
        last: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 8,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "g",
                    },
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 10,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "y",
                        },
                    },
                ],
            },
        },
    },
}
